upgraded to use latest xtest version